:zap: Update index

--- a/index.html
+++ b/index.html
@@ -2,4 +2,9 @@
 
 <ol>
 <li> <a href='helper/index.html' target="_blank">Helper</li>
+<li> <a href='docy/index.html' target="_blank">Docy</li>
+<li> <a href='documy/index-2.html' target="_blank">Documy</li>
+
+
+
 </ol>
